Fix for not working correctly on mobile. and removed some useless css

--- a/portfolio/src/components/navbar.module.css
+++ b/portfolio/src/components/navbar.module.css
@@ -1,6 +1,6 @@
 .container{
     background-color: white;
-    width: 100vw;
+    width: 100%;
     display: flex;
     height: 60px;
     align-items: center;
@@ -11,9 +11,6 @@
     border-radius: 5px;
     height: 45px;
     width: 120px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin-left: 30px;
 }
 
